Adding icons min-max

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul>
                     <li class="day">MONDAY</li>
                     <li class="humidity">HUMIDITY 20%</li>
-                    <li class="min-max">23° 27°</li>
+                    <li class="min-max"><i class="fas fa-angle-down"></i>23° <i class="fas fa-angle-up"></i>27°</li>
                     <li class="today-temp">23°</li>
                 </ul>
             </div>
